<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_content_background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/main_item_rl_1"
        android:background="@color/main_item_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin_left"
        android:layout_marginTop="@dimen/main_margin_top"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/main_item_1_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_action_add" />

        <TextView
            android:id="@+id/main_item_1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/main_item_1_icon"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/main_item_1_icon"
            android:text="@string/main_item_1"
            android:textColor="@color/main_item_title_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_item_1_title"
            android:layout_alignStart="@id/main_item_1_title"
            android:layout_marginStart="2dp"
            android:layout_marginTop="14dp"
            android:text="@string/create"
            android:textColor="@color/main_item_sub_title_text_color" />

        <ImageView
            android:src="@drawable/ic_action_book_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/main_item_1_icon"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_item_rl_2"
        android:background="@color/main_item_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin_left"
        android:layout_marginTop="@dimen/main_margin_top"
        app:layout_constraintTop_toBottomOf="@id/main_item_rl_1">

             <ImageView
            android:id="@+id/main_item_2_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_action_add" />

        <TextView
            android:id="@+id/main_item_2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/main_item_2_icon"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/main_item_2_icon"
            android:text="@string/main_item_2"
            android:textColor="@color/main_item_title_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_item_2_title"
            android:layout_alignStart="@id/main_item_2_title"
            android:layout_marginStart="2dp"
            android:layout_marginTop="14dp"
            android:text="@string/create"
            android:textColor="@color/main_item_sub_title_text_color" />

        <ImageView
            android:src="@drawable/ic_action_book_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/main_item_2_icon"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_item_rl_3"
        android:background="@color/main_item_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin_left"
        android:layout_marginTop="@dimen/main_margin_top"
        app:layout_constraintTop_toBottomOf="@id/main_item_rl_2">

        <ImageView
            android:id="@+id/main_item_3_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_action_add" />

        <TextView
            android:id="@+id/main_item_3_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/main_item_3_icon"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/main_item_3_icon"
            android:text="@string/main_item_3"
            android:textColor="@color/main_item_title_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_item_3_title"
            android:layout_alignStart="@id/main_item_3_title"
            android:layout_marginStart="2dp"
            android:layout_marginTop="14dp"
            android:text="@string/create"
            android:textColor="@color/main_item_sub_title_text_color" />

        <ImageView
            android:src="@drawable/ic_action_book_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/main_item_3_icon"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>